# skyline

./: .earthlyignore  .gitattributes  .gitignore  Earthfile  README.md  alembic.ini  openapi-codegen.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/: index.html
frontend/public/: blank.stl
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Viewer.tsx
frontend/src/icons/: GitHub.tsx
frontend/src/lib/: state.ts  util.ts
frontend/src/queries/api/: skylineComponents.ts  skylineContext.ts  skylineFetcher.ts  skylineSchemas.ts
frontend/src/routes/: Error.tsx  Home.tsx
skyline/: app.py  config.py
skyline/cad/: skyline.py
skyline/cmd/: __init__.py
skyline/dependencies/: auth.py  database.py
skyline/migrations/: env.py
skyline/migrations/versions/: 6a8e39e07452_create_initial_contributiondata_model.py  7456e404c50c_create_initial_contributiondata_model.py  82a9de3f72c4_create_initial_contributiondata_model.py
skyline/models/: _all_models.py  contribution_data.py
skyline/routers/: __init__.py  auth.py  contributions.py
skyline/schemas/: __init__.py  common.py  contributions.py
skyline/tasks/: importing.py  importing_models.py
