[project]
name = "skyline"
version = "0.1.0"
description = "Generate 3D models of your GitHub activity"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.13.2",
    "authlib>=1.3.2",
    "cadquery>=2.4.0",
    "cadquery-ocp",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.2",
    "sqlalchemy[asyncio]>=2.0.35",
    "starlette[full]>=0.38.5",
    "structlog>=24.4.0",
    "typer>=0.12.5",
    "uvicorn>=0.30.6",
]

[tool.uv]
dev-dependencies = ["ruff>=0.6.5"]

[tool.uv.sources]
# Needed due to cadquery's CAD kernel not having a wheel on PyPI for Apple Silicon currently
# https://github.com/CadQuery/ocp-build-system/issues/11
cadquery-ocp = [
    { url = "https://github.com/CadQuery/ocp-build-system/releases/download/7.7.2.0/cadquery_ocp-7.7.2-cp312-cp312-macosx_11_0_arm64.whl", marker = "sys_platform == 'darwin' and platform_machine == 'arm64'" },
    { url = "https://github.com/CadQuery/ocp-build-system/releases/download/7.7.2.0/cadquery_ocp-7.7.2-cp312-cp312-manylinux_2_35_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
cadquery = { git = "https://github.com/CadQuery/cadquery.git" }
