[project]
name = "skyline"
version = "0.1.0"
description = "Generate 3D models of your GitHub activity"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.13.2",
    "authlib>=1.3.2",
    "cadquery>=2.4.0",
    "cadquery-ocp",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.2",
    "sqlalchemy[asyncio]>=2.0.35",
    "starlette[full]>=0.38.5",
    "structlog>=24.4.0",
    "typer>=0.12.5",
    "uvicorn>=0.30.6",
]

[tool.uv]
dev-dependencies = ["ruff>=0.6.5"]

[tool.uv.sources]
cadquery = { git = "https://github.com/CadQuery/cadquery.git" }
